# ThirdParty-dev

./: .gitignore  Allclean  Allwmake  AllwmakeLibccmio  ParaView-5.10.1.patch  ParaView-5.11.2.patch  ParaView-5.12.1.patch  ParaView-5.13.3.patch  ParaView-5.6.3.patch  README.html  README.org  README_scotch  makeCGAL  makeCmake  makeGcc  makeGcc45  makeGcc46  makeGcc47  makeGcc48  makeGcc49  makeGperftools  makeLLVM  makeMesa  makeParaView  makeParaView4
etc/tools/: ParaView3Functions  ParaView4Functions  ParaViewFunctions  ThirdPartyFunctions
etc/wmakeFiles/libccmio/: files  options
etc/wmakeFiles/scotch/: Makefile.inc.i686_pc_linux2.shlib-OpenFOAM
scotch_6.0.3/src/: Makefile.inc
scotch_6.0.6/: INSTALL.txt  README.md
scotch_6.0.6/src/: Makefile
scotch_6.0.6/src/Make.inc/: Makefile.inc.i686_pc_linux2.shlib  Makefile.inc.i686_pc_linux2.shlib.debug  Makefile.inc.i686_pc_mingw32  Makefile.inc.x86-64_pc_linux2.icc.impi  Makefile.inc.x86-64_pc_linux2.icc.impi.debug  Makefile.inc.x86-64_pc_linux2.shlib
scotch_6.0.6/src/check/: Makefile  test_common_file_compress.c  test_common_random.c  test_common_thread.c  test_fibo.c  test_scotch_arch.c  test_scotch_arch_deco.c  test_scotch_dgraph_band.c  test_scotch_dgraph_grow.c  test_scotch_graph_coarsen.c  (+7 more)
scotch_6.0.9/: INSTALL.txt
scotch_6.0.9/ci/: Makefile.inc  analysis.sh  gitlab-ci-env.sh  gitlab-ci-filelist.sh
scotch_6.0.9/src/: Makefile
scotch_7.0.10/: .gitignore  .gitlab-ci.yml  CMakeLists.txt  INSTALL.txt  LICENCE_fr.txt  README.md  README.txt
scotch_7.0.10/ci/: Makefile.inc  build_cmake.sh  env_cmake.sh  env_makefile.sh  test_cmake.sh  test_makefile.sh
scotch_7.0.10/cmake/: SCOTCHConfig.cmake.in
scotch_7.0.10/src/: CMakeLists.txt  Makefile
scotch_7.0.10/src/check/: CMakeLists.txt  Makefile  test_common_file_compress.c  test_common_random.c  test_fibo.c  test_libmetis.c  test_libmetis_dual.c  test_libmetis_dual_f.f90.in  test_scotch_arch.c  test_scotch_arch_deco.c  test_scotch_context.c  test_scotch_dgraph_check.c  test_scotch_dgraph_coarsen.c  test_scotch_graph_coarsen.c  test_scotch_graph_color.c  test_scotch_graph_map.c  test_scotch_graph_order.c
scotch_7.0.10/src/check/data/: bump.xyz  bump_b100000.xyz  compress-coarsen.grf  cube_8.msh  cube_8_d3.grf  m4x4_b100000.grf  m4x4_vertlist.txt  nocoarsen.grf  ship001-0.adm  ship001-0.dgr  ship001-1.adm  ship001-1.dgr  ship001-2.adm  ship001-2.dgr  ship001-3.adm  ship001-3.dgr  small2.msh  small2_d1.grf  small2_d2.grf  small3-0.adm  small3-0.dgr  small3-1.adm  small3-1.dgr  small3-2.adm  small3-2.dgr
scotch_7.0.8/: .gitignore  .gitlab-ci.yml  CMakeLists.txt  INSTALL.txt  LICENSE_en.txt  LISEZ-MOI.txt  README.md
scotch_7.0.8/ci/: Makefile.inc  analysis.sh  build_makefile.sh  env_makefile.sh  gitlab-ci-filelist.sh
scotch_7.0.8/src/: CMakeLists.txt  Makefile
scotch_7.0.8/src/Make.inc/: Makefile.inc.alpha_dec_osf1  Makefile.inc.i686_mac_darwin10  Makefile.inc.i686_mac_darwin10.icc  Makefile.inc.i686_mac_darwin8  Makefile.inc.i686_pc_freebsd  Makefile.inc.i686_pc_haiku.shlib  Makefile.inc.i686_pc_linux2  Makefile.inc.i686_pc_linux2.c99  Makefile.inc.i686_pc_linux2.debug  Makefile.inc.i686_pc_linux2.nothreads  Makefile.inc.i686_pc_linux2.prof  Makefile.inc.i686_pc_linux2.shlib  Makefile.inc.i686_pc_linux2.shlib.debug  Makefile.inc.i686_pc_linux3  Makefile.inc.i686_pc_mingw32  Makefile.inc.i686_sun_solaris5  Makefile.inc.mips_sgi_irix6  Makefile.inc.pa11_hp_ux10  Makefile.inc.power3_ibm_aix5  Makefile.inc.power6_ibm_aix5  Makefile.inc.ppc450_ibm_bgp  Makefile.inc.ppca2_ibm_bgq  Makefile.inc.x86-64_cray-xt4_linux2  Makefile.inc.x86-64_pc_freebsd  Makefile.inc.x86-64_pc_haiku.shlib  Makefile.inc.x86-64_pc_linux2  Makefile.inc.x86-64_pc_linux2.icc  Makefile.inc.x86-64_pc_linux2.icc.debug  Makefile.inc.x86-64_pc_linux2.icc.impi  Makefile.inc.x86-64_pc_linux2.icc.impi.debug  Makefile.inc.x86-64_pc_linux2.shlib
scotch_7.0.8/src/check/: CMakeLists.txt  Makefile  test_common_thread.c  test_libesmumps.c  test_libmetis_dual_f.f90.in  test_multilib.c  test_scotch_dgraph_band.c  test_scotch_dgraph_coarsen.c  test_scotch_dgraph_grow.c  test_scotch_dgraph_induce.c  test_scotch_dgraph_redist.c  test_scotch_graph_diam.c  test_scotch_graph_dump.c  test_scotch_graph_induce.c  test_scotch_graph_map_copy.c  test_scotch_graph_part_ovl.c  test_scotch_mesh_graph.c  test_strat_par.c  test_strat_seq.c
scotch_7.0.8/src/check/data/: m16x16_b100000.grf  small.grf  small_1.grf  small_3.grf
scotch_7.0.8/src/esmumps/: CMakeLists.txt  Makefile  dof.c  esmumps.c  fax.h  graph.h  library_esmumps_f.c  library_esmumps_strats.c  module.h  order.c  order_check.c  order_io.c  symbol.h  symbol_check.c  symbol_cost.c  symbol_cost.h  symbol_fax.c  symbol_fax_graph.c  test_fax.c
scotch_7.0.8/src/libscotch/: CMakeLists.txt  Makefile  arch.c  arch_build.c  arch_cmplt.c  arch_cmplt_mpi.h  arch_cmpltw.c  arch_cmpltw_mpi.h  arch_deco.c  arch_deco.h  arch_deco2.c  arch_deco2_mpi.c  arch_deco_mpi.c  arch_dist.c  arch_dist_mpi.c  arch_hcub.c  arch_hcub_mpi.c  arch_mesh.c  arch_mesh.h  arch_mesh_mpi.c  arch_mesh_mpi.h  arch_tleaf.c  arch_tleaf_mpi.h  arch_torus.c  arch_torus_mpi.h  arch_vcmplt.c  arch_vcmplt_mpi.h  arch_vhcub.c  arch_vhcub_mpi.c  arch_vhcub_mpi.h  bdgraph.h  bdgraph_bipart_bd.c  bdgraph_bipart_ml.h  bdgraph_bipart_sq.c  bdgraph_bipart_st.c  bdgraph_bipart_zr.c  bdgraph_store.c  bgraph_bipart_df.c  bgraph_bipart_df.h  bgraph_bipart_fm.c  (+246 more)
scotch_7.0.8/src/libscotchmetis/: CMakeLists.txt  Makefile  library_metis.h  library_parmetis.h  metis_graph_dual.c  metis_graph_dual.h  metis_graph_order_f.c  metis_graph_part_dual.c  metis_graph_part_dual_f.c  metis_options.c  parmetis_dgraph_order.c  parmetis_dgraph_part.c
scotch_7.0.8/src/scotch/: Makefile  acpl.h  amk_ccc.c  amk_ccc.h  amk_fft2.c  amk_fft2.h  amk_grf.c  amk_hy.h  amk_m2.h  amk_p2.h  dggath.c  dggath.h  dgord.c  dgscat.c  gcv.h  gdump.c  gmap.c  gmap.h  gmk_hy.h  gmk_m2.c  gmk_m2.h  gmk_m3.c  gord.c  gord.h  gotst.h  gout_c.c  gout_c.h  gout_o.c  gout_o.h  gscat.h  gtst.c  gtst.h  mcv.c  mord.h
scotch_7.0.8/tgt/: k9.tgt
(+1210 files in other folders)
